--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
     <header style="background-image: url('img/agency/backgrounds/bg-header.jpg');">
         <div class="intro-content">
             <img src="img/agency/profile.svg" class="img-responsive img-centered" alt="">
-            <div class="brand-name">Vitality</div>
+            <div class="brand-name">testing</div>
             <hr class="colored">
-            <div class="brand-name-subtext">by Start Bootstrap</div>
+            <div class="brand-name-subtext">by yeidam</div>
         </div>
         <div class="scroll-down">
             <a class="btn page-scroll" href="#about"><i class="fa fa-angle-down fa-fw"></i></a>
