--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Vitality</title>
+    <title>포폴</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
@@ -36,8 +36,9 @@
     <link href="vendor/device-mockups/device-mockups.min.css" rel="stylesheet" type="text/css">
 
     <!-- Vitality Theme CSS -->
+    <link rel="stylesheet" href="/css/main.css">
     <!-- INSTRUCTIONS: Uncomment the color scheme you want to use. Red is chosen by default. -->
-    <link href="css/vitality-red.css" rel="stylesheet" type="text/css">
+    <!-- <link href="css/vitality-red.css" rel="stylesheet" type="text/css"> -->
     <!-- <link href="css/vitality-aqua.css" rel="stylesheet" type="text/css"> -->
     <!-- <link href="css/vitality-blue.css" rel="stylesheet" type="text/css"> -->
     <!-- <link href="css/vitality-green.css" rel="stylesheet" type="text/css"> -->
@@ -46,7 +47,8 @@
     <!-- <link href="css/vitality-purple.css" rel="stylesheet" type="text/css"> -->
     <!-- <link href="css/vitality-tan.css" rel="stylesheet" type="text/css"> -->
     <!-- <link href="css/vitality-turquoise.css" rel="stylesheet" type="text/css"> -->
-    <!-- <link href="css/vitality-yellow.css" rel="stylesheet" type="text/css"> -->
+    <link href="css/vitality-yellow.css" rel="stylesheet" type="text/css">
+
 
     <!-- IE8 support for HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -63,7 +65,7 @@
 
     <!-- Navigation -->
     <!-- NOTE: .navbar-default and .navbar-inverse are both supported with this theme. -->
-    <nav class="navbar navbar-inverse navbar-fixed-top navbar-expanded">
+    <nav class="navbar navbar-inverse navbar-fixed-top navbar-expanded" id="myMenu">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -71,7 +73,7 @@
                     <i class="fa fa-bars"></i> Menu
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <img src="img/agency/logo.svg" class="img-responsive" alt="">
+                    <img src="img/yeidam/logo.svg" class="img-responsive" alt="">
                 </a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -83,13 +85,13 @@
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#process">Process</a>
+                        <a class="page-scroll" href="#process">Profile</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#work">Work</a>
+                        <a class="page-scroll" href="#work">Design</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#pricing">Pricing</a>
+                        <a class="page-scroll" href="#pricing">Contents</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
@@ -100,15 +102,51 @@
     </nav>
 
     <!-- Header -->
-    <header style="background-image: url('img/agency/backgrounds/bg-header.jpg');">
-        <div class="intro-content">
-            <img src="img/agency/profile.svg" class="img-responsive img-centered" alt="">
-            <div class="brand-name">testing</div>
-            <hr class="colored">
-            <div class="brand-name-subtext">by yeidam</div>
-        </div>
-        <div class="scroll-down">
-            <a class="btn page-scroll" href="#about"><i class="fa fa-angle-down fa-fw"></i></a>
+    <header>
+            <svg viewBox="0 0 100 100" preserveAspectRatio="xMidYMid slice">
+        <defs>
+            <radialGradient id="Gradient1" cx="50%" cy="50%" fx="10%" fy="50%" r=".5">
+                <animate attributeName="fx" dur="34s" values="0%;3%;0%" repeatCount="indefinite" />
+                <stop offset="0%" stop-color="rgba(36, 76, 163, 1)" />
+                <stop offset="100%" stop-color="rgba(144, 166, 214, 0)" />
+            </radialGradient>
+            <radialGradient id="Gradient2" cx="50%" cy="50%" fx="10%" fy="50%" r=".5">
+                <animate attributeName="fx" dur="23.5s" values="0%;3%;0%" repeatCount="indefinite" />
+                <stop offset="0%" stop-color="rgba(224, 210, 11, 1)" />
+                <stop offset="100%" stop-color="rgba(230, 225, 154, 0)" />
+            </radialGradient>
+            <radialGradient id="Gradient3" cx="50%" cy="50%" fx="50%" fy="50%" r=".5">
+                <animate attributeName="fx" dur="21.5s" values="0%;3%;0%" repeatCount="indefinite" />
+                <stop offset="0%" stop-color="rgba(186, 67, 43, 1)" />
+                <stop offset="100%" stop-color="rgba(199, 146, 135, 0)" />
+            </radialGradient>
+        </defs>
+            <rect x="0" y="0" width="100%" height="100%" fill="url(#Gradient1)">
+            <animate attributeName="x" dur="20s" values="25%;0%;25%" repeatCount="indefinite" />
+            <animate attributeName="y" dur="21s" values="0%;25%;0%" repeatCount="indefinite" />
+            <animateTransform attributeName="transform" type="rotate" from="0 50 50" to="360 50 50" dur="17s" repeatCount="indefinite" />
+            </rect>
+            <rect x="0" y="0" width="100%" height="100%" fill="url(#Gradient2)">
+            <animate attributeName="x" dur="23s" values="-25%;0%;-25%" repeatCount="indefinite" />
+            <animate attributeName="y" dur="24s" values="0%;50%;0%" repeatCount="indefinite" />
+            <animateTransform attributeName="transform" type="rotate" from="0 50 50" to="360 50 50" dur="18s" repeatCount="indefinite" />
+            </rect>
+            <rect x="0" y="0" width="100%" height="100%" fill="url(#Gradient3)">
+            <animate attributeName="x" dur="25s" values="0%;25%;0%" repeatCount="indefinite" />
+            <animate attributeName="y" dur="26s" values="0%;25%;0%" repeatCount="indefinite" />
+            <animateTransform attributeName="transform" type="rotate" from="360 50 50" to="0 50 50" dur="19s" repeatCount="indefinite" />
+            </rect>
+        </svg>
+        <svg viewBox="0 0 1280 720" id="header_svg">
+            <text text-anchor="middle" x="25%" y="50%">다양한 색을 가진</text>
+            <text text-anchor="middle" x="21%" y="63%">박예담입니다.</text>
+        </svg>
+
+        <div class="ellipses-container">
+            <div class="ellipses ellipses__outer--thin">
+                <div class="ellipses ellipses__orbit"></div>
+            </div>
+            <div class="ellipses ellipses__outer--thick"></div>
         </div>
     </header>
 
@@ -117,7 +155,7 @@
         <div class="container-fluid">
             <div class="row text-center">
                 <div class="col-lg-12 wow fadeIn">
-                    <h1>A Theme for Creatives &amp; Agencies</h1>
+                    <h1>자기소개 페이지다</h1>
                     <p>Vitality is the perfect theme for a freelance professional or an agency.</p>
                     <hr class="colored">
                 </div>
@@ -290,7 +328,7 @@
     </section>
 
     <!-- Quote Call to Action -->
-    <aside class="cta-quote" style="background-image: url('img/agency/backgrounds/bg-aside.jpg');">
+    <!-- <aside class="cta-quote" style="background-image: url('img/agency/backgrounds/bg-aside.jpg');">
         <div class="container wow fadeIn">
             <div class="row">
                 <div class="col-md-10 col-md-offset-1">
@@ -300,7 +338,7 @@
                 </div>
             </div>
         </div>
-    </aside>
+    </aside> -->
 
     <!-- Services Section -->
     <section id="process" class="services">
@@ -856,6 +894,7 @@
     <!-- Block Button Call to Action -->
     <a href="https://wrapbootstrap.com/theme/vitality-multipurpose-one-page-theme-WB02K3KK3" class="btn btn-block btn-full-width">Buy Vitality Now!</a>
 
+
     <!-- Footer -->
     <footer class="footer" style="background-image: url('img/agency/backgrounds/bg-footer.jpg')">
         <div class="container text-center">
@@ -1137,6 +1176,7 @@
     <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
     <script src="js/classie.js"></script>
     <script src="js/cbpAnimatedHeader.js"></script>
+    <script src="/js/main.js"></script>
 
     <!-- Plugin Scripts -->
     <script src="vendor/jquery.easing/jquery.easing.min.js"></script>
