--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <!-- <link href="css/vitality-pink.css" rel="stylesheet" type="text/css"> -->
     <!-- <link href="css/vitality-purple.css" rel="stylesheet" type="text/css"> -->
     <!-- <link href="css/vitality-tan.css" rel="stylesheet" type="text/css"> -->
-    <!-- <link href="css/vitality-turquoise.css" rel="stylesheet" type="text/css"> -->
+    <!-- <link href="css/vitxality-turquoise.css" rel="stylesheet" type="text/css"> -->
     <link href="css/vitality-yellow.css" rel="stylesheet" type="text/css">
 
 
@@ -63,6 +63,7 @@
 
 <body id="page-top">
 
+    <div id="side_menu"></div>
     <!-- Navigation -->
     <!-- NOTE: .navbar-default and .navbar-inverse are both supported with this theme. -->
     <nav class="navbar navbar-inverse navbar-fixed-top navbar-expanded" id="myMenu">
