--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             <div class="ellipses ellipses__outer--thick"></div>
         </div>
     </header>
-
+    <div>아녕</div>
     <!-- About Section -->
     <section id="about">
         <div class="container-fluid">
