--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <link href="vendor/formstone/background.css" rel="stylesheet" type="text/css">
     <link href="vendor/animate.css/animate.min.css" rel="stylesheet" type="text/css">
     <link href="vendor/device-mockups/device-mockups.min.css" rel="stylesheet" type="text/css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     <!-- Vitality Theme CSS -->
     <link rel="stylesheet" href="/css/main.css">
@@ -63,63 +64,50 @@
 
 <body id="page-top">
 
-    <div id="side_menu"></div>
+    <div class="ylogo">
+        <a href="index.html"><img src="img/yeidam/logo.svg" alt="" style="width: 60px;"></a>
+    </div>
     <!-- Navigation -->
     <!-- NOTE: .navbar-default and .navbar-inverse are both supported with this theme. -->
-    <nav class="navbar navbar-inverse navbar-fixed-top navbar-expanded" id="myMenu">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <i class="fa fa-bars"></i> Menu
-                </button>
-                <a class="navbar-brand page-scroll" href="#page-top">
-                    <img src="img/yeidam/logo.svg" class="img-responsive" alt="">
-                </a>
-            </div>
-            <div class="ycontainer">
-                <div class="ymenu-container" id="ytoggle">
-                <a href="#" class="ymenu" ><i class="fa fa-bars" aria-hidden="true"></i></a>
+
+    <!-- 헤더 -->
+    <div class="youter navbar navbar-inverse navbar-fixed-top navbar-expanded">
+        <div class="yinner">
+            <header>
+                <div class="container-fluid clearfix">
+                    <div class="row">
+                        <i class="fa fa-bars nav-toggle" aria-hidden="true"></i>
+                        <nav role="navigation">
+                            <i class="fa fa-times nav-toggle" aria-hidden="true"></i>
+                            <ul class="list-unstyled" id="nav">
+                                <li style="--clr:#00ade1">
+                                    <a class="nav-link page-scroll" href="#page-top" data-text="&nbsp;Home">&nbsp;Home&nbsp;</a>
+                                </li>
+                                <li style="--clr:#ff6492">
+                                    <a class="nav-link page-scroll" href="#about" data-text="&nbsp;About"><span>&nbsp;About&nbsp;</span></a>
+                                </li>
+                                <li style="--clr:#ffdd1c">
+                                    <a class="nav-link page-scroll" href="#process" data-text="&nbsp;Skills"><span>&nbsp;Skills&nbsp;</span></a>
+                                </li>
+                                <li style="--clr:#00dc82">
+                                    <a class="nav-link page-scroll" href="#work" data-text="&nbsp;Portfolio"><span>&nbsp;Portfolio&nbsp;</span></a>
+                                </li>
+                                <li  style="--clr:#dc00d4">
+                                    <a class="nav-link page-scroll" href="#pricing" data-text="&nbsp;Contacts"><span>&nbsp;Contacts&nbsp;</span></a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
                 </div>
-                <div class="yoverlay" id="yoverlay">
-                    <nav class="yoverlay-menu">
-                        <ul>
-                            <li ><a href="#">Home</a></li>
-                            <li><a href="#">Tour</a></li>
-                            <li><a href="#">Features</a></li>
-                            <li><a href="#">Contact</a></li>
-                        </ul>
-                    </nav>
-                </div>
-            </div>  
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <li class="hidden">
-                        <a class="page-scroll" href="#page-top"></a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#about">About</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#process">Profile</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#work">Design</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#pricing">Contents</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
-                    </li>
-                </ul>
-            </div>
+            </header>
         </div>
-    </nav>
-    
+    </div>
+
     <!-- Header -->
     <header>
-            <svg viewBox="0 0 100 100" preserveAspectRatio="xMidYMid slice">
+
+        <!-- 배경 -->
+        <svg viewBox="0 0 100 100" preserveAspectRatio="xMidYMid slice">
         <defs>
             <radialGradient id="Gradient1" cx="50%" cy="50%" fx="10%" fy="50%" r=".5">
                 <animate attributeName="fx" dur="34s" values="0%;3%;0%" repeatCount="indefinite" />
@@ -153,10 +141,6 @@
             <animateTransform attributeName="transform" type="rotate" from="360 50 50" to="0 50 50" dur="19s" repeatCount="indefinite" />
             </rect>
         </svg>
-        <!-- <svg viewBox="0 0 1280 720" id="header_svg">
-            <text text-anchor="middle" x="30%" y="50%">다양한 색을 가진</text>
-            <text text-anchor="middle" x="26%" y="63%">박예담입니다.</text>
-        </svg> -->
         <h2 class="ytitle">
             <span class="animated-text tilted">다양한</span> <span class="ytitle_b">색</span><span class="animated-text tilted">을 가진</span>
             <br>
@@ -1207,6 +1191,7 @@
     <script src="vendor/formstone/background.js"></script>
     <script src="vendor/mixitup/jquery.mixitup.js"></script>
     <script src="vendor/wow/wow.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
     <!-- Contact Form Scripts -->
     <script src="js/contact_me.js"></script>
