--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <body id="page-top">
 
     <div class="ylogo">
-        <a href="index.html"><img src="img/yeidam/logo.svg" alt="" style="width: 60px;"></a>
+        <a href="index.html"><img src="img/yeidam/logo_2.svg" alt="" style="width: 60px;"></a>
     </div>
     <!-- Navigation -->
     <!-- NOTE: .navbar-default and .navbar-inverse are both supported with this theme. -->
