--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                 <div class="about_line_wrap">
                     <div class="img_outline">
                         <div class="img_inline">
-                            <img src="/img/yeidam/memoji.jpeg" alt="">
+                            <img src="./img/yeidam/memoji.jpeg" alt="">
                         </div>
                         <span class="outline_left"></span>
                         <span class="outline_right"></span>
@@ -271,19 +271,34 @@
                     <div class="contact_line"></div>
                     <p>Contact</p>
                     <div class="about_inner_wrap about_inner_wrap2">
-                        <p>인적사항이 들어가남</p>
-                        <p>박예담 1998.01.09</p>
+                        <p>Name 박예담</p>
+                        <p>Birth 1998.01.09</p>
+                        <p>Phone 010-7478-6256</p>
+                        <p>Mail yaedams2@gmail.com</p>
                     </div>
                 </div>
                 <div class="hard_skill_wrap">
                     <div class="hard_skill_line"></div>
                     <p>Hardskill</p>
-                    <div class="about_inner_wrap">
-
+                    <div class="about_inner_wrap about_inner_wrap3">
+                        <ul class="hard_skill_inner">
+                            <li>Illustrator</li>
+                            <li>Photoshop</li>
+                            <li>Figma</li>
+                            <li>CSS</li>
+                            <li>SASS</li>
+                        </ul>
+                        <ul class="hard_skill_inner">
+                            <li>HTML</li>
+                            <li>JavaScript</li>
+                            <li>jQuery</li>
+                            <li>SQL</li>
+                            <li>React</li>
+                        </ul>
                     </div>
                 </div>
             </div>
-            <!-- <span class="about_deco"></span> -->
+            <!-- <div class="about_deco"></div> -->
             <div class="career_2">
                 <div class="certificate_wrap">
                     <div class="certificate_line"></div>
@@ -510,7 +525,7 @@
                     <div class="project-overlay"></div>
                 </div>
                 <div class="project p-4">
-                    <div class="project-title"><h3>todo list</h3></div>
+                    <div class="project-title"><h3>todo list (바닐라 자바스크립트)</h3></div>
                     <div class="project-categ">
                         <button><a href="http://suljan.dothome.co.kr/todo/main.html" target="_blank">Link (↗)</a></button>
                     </div>
