--- a/index.html
+++ b/index.html
@@ -250,6 +250,7 @@
                 <p>HELLO!</p>
                 <p>HELLO!</p>
             </div>
+
             <div class="about_img_section">
                 <div class="about_line_wrap">
                     <div class="img_outline">
@@ -271,42 +272,120 @@
                     <div class="contact_line"></div>
                     <p>Contact</p>
                     <div class="about_inner_wrap about_inner_wrap2">
-                        <p>Name 박예담</p>
-                        <p>Birth 1998.01.09</p>
-                        <p>Phone 010-7478-6256</p>
-                        <p>Mail yaedams2@gmail.com</p>
+                        <ul>
+                            <li>
+                                <strong>Name</strong>
+                                <p>박예담</p>
+                            </li>
+                            <li>
+                                <strong>Birth</strong>
+                                <p>1998.01.09</p>
+                            </li>
+                            <li>
+                                <strong>Phone</strong>
+                                <p>010-7478-6256</p>
+                            </li>
+                            <li>
+                                <strong>Mail</strong>
+                                <p>yaedams2@gmail.com</p>
+                            </li>
+                        </ul>
                     </div>
                 </div>
                 <div class="hard_skill_wrap">
                     <div class="hard_skill_line"></div>
                     <p>Hardskill</p>
                     <div class="about_inner_wrap about_inner_wrap3">
-                        <ul class="hard_skill_inner">
-                            <li>Illustrator</li>
-                            <li>Photoshop</li>
-                            <li>Figma</li>
-                            <li>CSS</li>
-                            <li>SASS</li>
+                        <ul class="hard_skill_inner_1">
+                            <li class="hard_skill_box">
+                                <div class="hard_label a">Illustrator</div>
+                                <div class="progress-bar">
+                                    <div class="progress fill-2"></div>
+                                </div>
+                            </li>
+                            <li class="hard_skill_box">
+                                <div class="hard_label b">Photoshop</div>
+                                <div class="progress-bar">
+                                    <div class="progress fill-1"></div>
+                                </div>
+                            </li>
+                            <li class="hard_skill_box">
+                                <div class="hard_label c">Figma</div>
+                                <div class="progress-bar">
+                                    <div class="progress fill-3"></div>
+                                </div>
+                            </li>
+                            <li class="hard_skill_box">
+                                <div class="hard_label b">CSS</div>
+                                <div class="progress-bar">
+                                    <div class="progress fill-3"></div>
+                                </div>
+                            </li>
+                            <li class="hard_skill_box">
+                                <div class="hard_label b">SASS</div>
+                                <div class="progress-bar">
+                                    <div class="progress fill-3"></div>
+                                </div>
+                            </li>
                         </ul>
-                        <ul class="hard_skill_inner">
-                            <li>HTML</li>
-                            <li>JavaScript</li>
-                            <li>jQuery</li>
-                            <li>SQL</li>
-                            <li>React</li>
+                        <ul class="hard_skill_inner_2">
+                            <li class="hard_skill_box">
+                                <div class="hard_label b">HTML</div>
+                                <div class="progress-bar">
+                                    <div class="progress fill-3"></div>
+                                </div>
+                            </li>
+                            <li class="hard_skill_box">
+                                <div class="hard_label b">JavaScript</div>
+                                <div class="progress-bar">
+                                    <div class="progress fill-1"></div>
+                                </div>
+                            </li>
+                            <li class="hard_skill_box">
+                                <div class="hard_label b">jQuery</div>
+                                <div class="progress-bar">
+                                    <div class="progress fill-2"></div>
+                                </div>
+                            </li>
+                            <li class="hard_skill_box">
+                                <div class="hard_label b">SQL</div>
+                                <div class="progress-bar">
+                                    <div class="progress fill-1"></div>
+                                </div>
+                            </li>
+                            <li class="hard_skill_box">
+                                <div class="hard_label b">React</div>
+                                <div class="progress-bar">
+                                    <div class="progress fill-1"></div>
+                                </div>
+                            </li>
                         </ul>
                     </div>
                 </div>
             </div>
             <!-- <div class="about_deco"></div> -->
             <div class="career_2">
-                <div class="certificate_wrap">
-                    <div class="certificate_line"></div>
-                    <p>Certificate</p>
+                <div class="license_wrap">
+                    <div class="license_line"></div>
+                    <p>license</p>
+                    <div class="about_inner_wrap license_inner">
+                        <ul>
+                            <li>
+                                <p>2021/</p><p>자동차 운전면허증 2종보통</p>
+                            </li>
+                            <li>
+                                <p>2023/</p><div><p>gtq</p><p>웹디자인기능사</p></div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="experience_wrap">
+                    <div class="experience_line"></div>
+                    <p>Experience</p>
                     <div class="about_inner_wrap">
-                        <p>• 운전면허</p>
-                        <p>• gtq</p>
-                        <p>• 웹디자인기능사</p>
+                        <p>• LX 판토스 베트남법인 인턴쉽</p>
+                        <p>[ 2019.11 - 2020.05 ]</p>
+                        
                     </div>
                 </div>
                 <div class="educations_wrap">
@@ -314,10 +393,98 @@
                     <p>Educations</p>
                     <div class="about_inner_wrap">
                         <p>• Shanghai Korean School</p>
-                        <p>[ 2012 - 2015 ]</p>
+                        <p>[ 2013.03 - 2016.02 ]</p>
                         <p>• 중앙대 국제물류학과</p>
                         <p>[ 2016.03 - 2021.08 ]</p>
                     </div>
+                </div>
+            </div>
+            <div class="career_deco">
+                <div class="deco_svg1 deco_1">
+                    <img src="https://img.icons8.com/ios-filled/50/efdb5e/happy--v1.png"/>
+                </div>
+                <div>
+                    <img src="https://img.icons8.com/ios-glyphs/60/2b7799/lupine.png"/>
+                </div>
+                <div class="deco_svg1 deco_3">
+                    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                        viewBox="0 0 500 500" enable-background="new 0 0 500 500" xml:space="preserve">
+                    <g>
+                        <path fill="#f46839" d="M264.184,205.751c120.936-209.467-149.303-209.467-28.368,0C114.881-3.716-20.239,230.318,221.632,230.318
+                            c-241.871,0-106.752,234.034,14.184,24.567c-120.936,209.467,149.303,209.467,28.368,0
+                            c120.936,209.467,256.055-24.567,14.184-24.567C520.239,230.318,385.119-3.716,264.184,205.751z"/>
+                        <path fill="none" stroke="none" stroke-miterlimit="10" d="M264.184,205.751c120.936-209.467-149.303-209.467-28.368,0
+                            C114.881-3.716-20.239,230.318,221.632,230.318c-241.871,0-106.752,234.034,14.184,24.567
+                            c-120.936,209.467,149.303,209.467,28.368,0c120.936,209.467,256.055-24.567,14.184-24.567
+                            C520.239,230.318,385.119-3.716,264.184,205.751z"/>
+                    </g>
+                    </svg>
+                </div>
+                <div class="deco_svg1 deco_4">
+                    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                            viewBox="0 0 612 792" style="enable-background:new 0 0 612 792;" xml:space="preserve">
+                    <g>
+                        <path style="fill:#efdb5e;" d="M407.5,440.1c80.3,93.7,4.3,169.6-89.3,89.3c-93.7,80.3-169.6,4.3-89.3-89.3
+                            c-80.3-93.7-4.3-169.6,89.3-89.3C411.8,270.5,487.8,346.4,407.5,440.1z"/>
+                    </g>
+                    </svg>
+                </div>
+                <div class="deco_svg1 deco_5">
+                    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                    viewBox="0 0 500 500" enable-background="new 0 0 500 500" xml:space="preserve">
+                    <g>
+                        <path fill="none" stroke="#f46839" stroke-miterlimit="10" d="M404.4,182.6l0-0.4c-27.1,3.3-48,6.4-64.4,11.2
+                            c-12.2,3.6-21.9,8.2-29.6,14.6c-11.6,9.6-18.8,23.1-23.8,43.2c-5.1,20.1-8,46.7-11.1,82.6l0.4,0l0.4,0c-2.8-31.9-5.4-56.5-9.5-75.7
+                            c-3.1-14.4-7-25.7-12.4-34.8c-8.1-13.6-19.6-22.1-36.7-28c-17.1-6-39.7-9.4-70.3-13.1l0,0.4l0,0.4c27.1-3.3,48-6.4,64.4-11.2
+                            c12.2-3.6,21.9-8.2,29.6-14.6c11.6-9.6,18.8-23.1,23.8-43.2c5.1-20.1,8-46.7,11.1-82.6l-0.4,0l-0.4,0c2.8,31.9,5.4,56.5,9.5,75.7
+                            c3.1,14.4,7,25.7,12.4,34.8c8.1,13.6,19.6,22.1,36.7,28c17.1,6,39.7,9.4,70.3,13.1L404.4,182.6l0-0.4L404.4,182.6l0-0.4
+                            c-27.1-3.3-48-6.4-64.2-11.2c-12.2-3.6-21.7-8.2-29.3-14.4c-11.4-9.4-18.5-22.8-23.5-42.8c-5-20-8-46.6-11.1-82.5h-0.8
+                            c-2.8,31.9-5.4,56.5-9.5,75.6c-3.1,14.3-6.9,25.6-12.3,34.5c-8,13.4-19.3,21.8-36.3,27.7c-17,5.9-39.6,9.4-70.1,13.1l-3.2,0.4
+                            l3.2,0.4c27.1,3.3,48,6.4,64.2,11.2c12.2,3.6,21.7,8.2,29.3,14.4c11.4,9.4,18.5,22.8,23.5,42.8c5,20,8,46.6,11.1,82.5h0.8
+                            c2.8-31.9,5.4-56.5,9.5-75.6c3.1-14.3,6.9-25.6,12.3-34.5c8-13.4,19.3-21.8,36.3-27.7c17-5.9,39.6-9.4,70.1-13.1l3.2-0.4l-3.2-0.4
+                            L404.4,182.6z"/>
+                    </g>
+                    <g>
+                        <path fill="none" stroke="#f46839" stroke-miterlimit="10" d="M205.2,306.9L205.2,306.9c-5.5,0.6-9.7,1.2-13,2.2
+                            c-2.5,0.7-4.4,1.7-6,2.9c-2.3,1.9-3.8,4.7-4.8,8.7c-1,4.1-1.6,9.4-2.2,16.7l0.1,0l0.1,0c-0.6-6.4-1.1-11.4-1.9-15.3
+                            c-0.6-2.9-1.4-5.2-2.5-7c-1.6-2.7-4-4.5-7.4-5.7c-3.4-1.2-8-1.9-14.2-2.6l0,0.1l0,0.1c5.5-0.7,9.7-1.3,13-2.3
+                            c2.5-0.7,4.4-1.7,6-2.9c2.3-1.9,3.8-4.7,4.8-8.7c1-4.1,1.6-9.4,2.2-16.7l-0.1,0l-0.1,0c0.6,6.4,1.1,11.4,1.9,15.3
+                            c0.6,2.9,1.4,5.2,2.5,7c1.6,2.7,4,4.5,7.4,5.7C194.5,305.5,199,306.2,205.2,306.9L205.2,306.9L205.2,306.9L205.2,306.9L205.2,306.9
+                            c-5.5-0.7-9.7-1.4-12.9-2.3c-2.5-0.7-4.4-1.6-5.9-2.9c-2.3-1.9-3.7-4.6-4.7-8.6c-1-4-1.6-9.4-2.2-16.6h-0.2
+                            c-0.6,6.4-1.1,11.4-1.9,15.2c-0.6,2.9-1.4,5.2-2.5,7c-1.6,2.7-3.9,4.4-7.3,5.6c-3.4,1.2-8,1.9-14.1,2.6l-0.7,0.1l0.7,0.1
+                            c5.5,0.7,9.7,1.3,13,2.3c2.5,0.7,4.4,1.6,5.9,2.9c2.3,1.9,3.7,4.6,4.7,8.6c1,4,1.6,9.4,2.2,16.6h0.2c0.6-6.4,1.1-11.4,1.9-15.2
+                            c0.6-2.9,1.4-5.2,2.5-7c1.6-2.7,3.9-4.4,7.3-5.6C194.5,308.4,199,307.7,205.2,306.9h0.7H205.2L205.2,306.9z"/>
+                    </g>
+                    </svg>
+                    
+                </div>
+                <div class="deco_svg1 deco_6">
+                    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                        viewBox="0 0 612 792" enable-background="new 0 0 612 792" xml:space="preserve">
+                    <line fill="none" stroke="#000000" stroke-width="10" stroke-miterlimit="10" x1="302.9" y1="198.5" x2="306" y2="606.8"/>
+                    <line fill="none" stroke="#000000" stroke-width="10" stroke-miterlimit="10" x1="224.9" y1="214.6" x2="384" y2="590.7"/>
+                    <line fill="none" stroke="#000000" stroke-width="10" stroke-miterlimit="10" x1="100.3" y1="404.2" x2="508.6" y2="401.1"/>
+                    <line fill="none" stroke="#000000" stroke-width="10" stroke-miterlimit="10" x1="116.4" y1="482.2" x2="492.5" y2="323.1"/>
+                    <line fill="none" stroke="#000000" stroke-width="10" stroke-miterlimit="10" x1="159" y1="259.4" x2="449.9" y2="545.9"/>
+                    <line fill="none" stroke="#000000" stroke-width="10" stroke-miterlimit="10" x1="115.2" y1="326" x2="493.7" y2="479.4"/>
+                    <line fill="none" stroke="#000000" stroke-width="10" stroke-miterlimit="10" x1="161.2" y1="548.1" x2="447.7" y2="257.2"/>
+                    <line fill="none" stroke="#000000" stroke-width="10" stroke-miterlimit="10" x1="227.8" y1="591.9" x2="381.1" y2="213.5"/>
+                    </svg>
+                </div>
+                <div class="deco_svg1 deco_8">
+                    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                        viewBox="0 0 612 792" enable-background="new 0 0 612 792" xml:space="preserve">
+                    <line fill="none" stroke="#f46839" stroke-width="20" stroke-linecap="round" stroke-miterlimit="10" x1="305.1" y1="250.7" x2="306.9" y2="495.5"/>
+                    <line fill="none" stroke="#f46839" stroke-width="20" stroke-linecap="round" stroke-miterlimit="10" x1="183.6" y1="374" x2="428.4" y2="372.2"/>
+                    <line fill="none" stroke="#f46839" stroke-width="20" stroke-linecap="round" stroke-miterlimit="10" x1="218.8" y1="287.2" x2="393.2" y2="459"/>
+                    <line fill="none" stroke="#f46839" stroke-width="20" stroke-linecap="round" stroke-miterlimit="10" x1="220.1" y1="460.3" x2="391.9" y2="285.9"/>
+                    </svg>
+
+                </div>
+                <div class="deco_circle">
+                    <span></span>
+                    <span></span>
+                    <span></span>
                 </div>
             </div>
         </div>
