--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                 <div class="about_line_wrap">
                     <div class="img_outline">
                         <div class="img_inline">
-                            <img src="./img/yeidam/memoji.jpeg" alt="">
+                            <img src="./img/yeidam/memoji.png" alt="">
                         </div>
                         <span class="outline_left"></span>
                         <span class="outline_right"></span>
@@ -583,7 +583,7 @@
                     <div class="p_bottom_1">
                         <p> / Type <span>Responsive Web</span></p>
                         <p> / Page <span>Main + Sub*7</span></p>
-                        <p> / Tool <span>Figma, HTML, SCSS, JS(jQuery),Swiper Js</span></p>
+                        <p> / Tool <span>Figma, HTML, SCSS, JS(jQuery), Swiper Js, Kakao API</span></p>
                         <p> / 참여도 <span>100%</span></p>
                     </div>
                     <div class="p_bottom_2">
@@ -624,8 +624,7 @@
                         <p> / Tool <span>Cafe24, HTML, css, JS(jQuery)</span></p>
                         <p> / 참여도 <span>100%</span></p>
                     </div>
-                    <div class="p_bottom_2">
-                        
+                    <div class="p_bottom_2 p_bottom_2-1">
                         <div class="p_bottom_btn">
                             <button><a href="https://yaedams2.cafe24.com/" target="_blank">VISIT WEB (↗)</a></button>
                             <!-- <button><a href="./file/project.pdf" target="_blank">기획서</a></button>
@@ -674,7 +673,7 @@
                 <div class="project p-3">
                     <div class="project-title"><h3>HMM</h3></div>
                     <div class="project-categ">
-                        <button><a href="#">Before (↗)</a></button>
+                        <button><a href="https://www.hmm21.com/company.do" target="_blank">Before (↗)</a></button>
                         <button><a href="http://suljan.dothome.co.kr/hmm/index.html" target="_blank">After (↗)</a></button>
                     </div>
                     <div class="project-overlay"></div>
