--- a/index.html
+++ b/index.html
@@ -68,6 +68,24 @@
     <div class="cursor_dot" data-cursor-dot></div>
     <div class="cursor_outline" data-cursor-outline></div>
     
+    <div class="top_btn">
+        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+            viewBox="0 0 500 500" enable-background="new 0 0 500 500" xml:space="preserve">
+        <g>
+            <path fill="#f46839" d="M264.184,205.751c120.936-209.467-149.303-209.467-28.368,0C114.881-3.716-20.239,230.318,221.632,230.318
+                c-241.871,0-106.752,234.034,14.184,24.567c-120.936,209.467,149.303,209.467,28.368,0
+                c120.936,209.467,256.055-24.567,14.184-24.567C520.239,230.318,385.119-3.716,264.184,205.751z"/>
+            <path fill="none" stroke="none" stroke-miterlimit="10" d="M264.184,205.751c120.936-209.467-149.303-209.467-28.368,0
+                C114.881-3.716-20.239,230.318,221.632,230.318c-241.871,0-106.752,234.034,14.184,24.567
+                c-120.936,209.467,149.303,209.467,28.368,0c120.936,209.467,256.055-24.567,14.184-24.567
+                C520.239,230.318,385.119-3.716,264.184,205.751z"/>
+        </g>
+        </svg>
+    </div>
+    <div class="top_btn2">
+        <p>Top</p>
+    </div>
+
     <!-- Navigation -->
     <!-- NOTE: .navbar-default and .navbar-inverse are both supported with this theme. -->
     <nav id="nav" class="navbar navbar-inverse navbar-fixed-top navbar-expanded">
@@ -424,7 +442,6 @@
                     </div>
                 </div>
             </div>
-            <!-- <div class="about_deco"></div> -->
             <div class="career_2">
                 <div class="license_wrap">
                     <div class="license_line"></div>
@@ -468,20 +485,7 @@
                 <div>
                     <img src="https://img.icons8.com/ios-glyphs/60/2b7799/lupine.png"/>
                 </div>
-                <div class="deco_svg1 deco_3">
-                    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                        viewBox="0 0 500 500" enable-background="new 0 0 500 500" xml:space="preserve">
-                    <g>
-                        <path fill="#f46839" d="M264.184,205.751c120.936-209.467-149.303-209.467-28.368,0C114.881-3.716-20.239,230.318,221.632,230.318
-                            c-241.871,0-106.752,234.034,14.184,24.567c-120.936,209.467,149.303,209.467,28.368,0
-                            c120.936,209.467,256.055-24.567,14.184-24.567C520.239,230.318,385.119-3.716,264.184,205.751z"/>
-                        <path fill="none" stroke="none" stroke-miterlimit="10" d="M264.184,205.751c120.936-209.467-149.303-209.467-28.368,0
-                            C114.881-3.716-20.239,230.318,221.632,230.318c-241.871,0-106.752,234.034,14.184,24.567
-                            c-120.936,209.467,149.303,209.467,28.368,0c120.936,209.467,256.055-24.567,14.184-24.567
-                            C520.239,230.318,385.119-3.716,264.184,205.751z"/>
-                    </g>
-                    </svg>
-                </div>
+                
                 <div class="deco_svg1 deco_4">
                     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                             viewBox="0 0 612 792" style="enable-background:new 0 0 612 792;" xml:space="preserve">
