--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
                     <div class="p_bottom_1">
                         <p> / Type <span>Responsive Web</span></p>
                         <p> / Page <span>Main + Sub*7</span></p>
-                        <p> / Tool <span>Figma, HTML, SCSS, JS(jQuery), Swiper Js, Kakao API</span></p>
+                        <p> / Tool <span>Figma, HTML, SCSS, JS(jQuery), Swiper Js, SQL, PHP</span></p>
                         <p> / 참여도 <span>100%</span></p>
                     </div>
                     <div class="p_bottom_2">
@@ -712,7 +712,7 @@
                 </div>
                 <div class="react_thum_1"><img src="./img/yeidam/react1.PNG" alt=""></div>
                 <div class="project p-6">
-                    <div class="project-title"><h3>React Todo</h3></div>
+                    <div class="project-title"><h3>todo list (react 기초)</h3></div>
                     <div class="project-categ">
                         <button><a href="https://github.com/yeidam/React.git" target="_blank">Git Link (↗)</a></button>
                     </div>
