--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <div class="cursor_dot" data-cursor-dot></div>
     <div class="cursor_outline" data-cursor-outline></div>
 
-    <a href="page-top" class="top_btn page-scroll">
+    <a href="#page-top" class="top_btn page-scroll">
 
     </a>
     
